@@ -1,3 +1,7 @@
+2004-08-06  Paolo Borelli  <pborelli@katamail.com>
+
+	* gedit-file.c (gedit_file_revert): don't leak uri.
+
 2004-08-05  Paolo Borelli  <pborelli@katamail.com>
 
 	* gedit-mdi.c: use document_get_deleted instead of
